2004-02-20  ujwal

	* Minor updates to selection stuff. Re-enabled "select all".
	* Added back print functionality. Removed "Print Selection". 
	  Handled by "Print".

2004-02-19  fabian

	* Now using srand() as hash function in hoping of less collision.
	* Fixed another cursor problem when dealing with double width characters.
	* Fixed a memory allocation bug that cause crashes.
	* Fixed some memory leaks in PTYTextView.
	
2004-02-19  ujwal

	* Forcing redraw when tabview is redrawn.
	* Fixed scrollbar problem.
	* Added back support for drag-drop into textview.
	* Added support for double and triple-click to select word and line.

2004-02-18  ujwal

	* Fixed scrollUp crash in PTYTextView: drawRect.

2004-02-18  fabian

	* Enhanced [PTYTextView drawRect] to use dirty array more efficiently.
	* fixed a bug in save/restoreBuffer in VT100Screen.
	* Optimized blinking
	* Unfinished work on Find functions
	* Proper init of PTYTextView fixed some weird crashes
	* Fixed some cursor problems related to wide characters.
	
2004-02-17  fabian

	* Fixed a bug in [VT100Screen eraseInDisplay].
	* Fixed a bug in [PTYTextView drawRect] when drawing underlines.
	* A slightly better hash algorithm for char image cache.
	
2004-02-17  ujwal

	* Added back support for background images. 
	* Some more optimizations in drawing code to draw only line rects that 
	  need drawing.

2004-02-16  ujwal

	* Forcing update in texview drawRect until drawing issue is resolved.
	* Fixed bold display bug.
	* Fixed a crash in moving tab to another window.
	* Added back support for "middle button paste".

2004-02-14  ujwal

	* Fixed bug in VT100Screen: setString when text wraps.
	* Drawing a nicer cursor. We can later allow the user to pick cursor color.
	* Not forcing an update on scrollEnd...gives big speed boost.

2004-02-13  ujwal

	* Fixed "Kill Buffer" crash.
	* Fixed "moving into buffer" in eraseInDisplay and scrollUp.

2004-02-13  fabian
