@@ -1701,12 +1701,12 @@ static VT100TCC decode_string(unsigned char *datap,
 
 - (int)foregroundColorCode
 {
-	return (reversed?BG_COLORCODE:FG_COLORCODE)+highlight*8+bold*BOLD_MASK+under*UNDER_MASK+blink*BLINK_MASK;
+	return (reversed?BG_COLORCODE:FG_COLORCODE+(highlight?1:bold)*8)+bold*BOLD_MASK+under*UNDER_MASK+blink*BLINK_MASK;
 }
 
 - (int)backgroundColorCode
 {
-    return reversed?FG_COLORCODE:BG_COLORCODE;
+    return (reversed?FG_COLORCODE:BG_COLORCODE);
 }
 
 - (NSData *)reportActivePositionWithX:(int)x Y:(int)y
